# ZeDaKombi

./: .gitignore  Dockerfile  README.md  package-lock.json  zcash.conf
ai_agent/: main.py  metadata.json
ai_agent/payment_agent/: main.py
auth/: docker-compose.yml  dockerfile  dockerfile.dev  main.py  requirements.txt
auth/db/: __init__.py  db.py
auth/models/: Beneficiario_model.py  Campanha_model.py  DistribuicaoRecurso.py  EstoqueRecurso.py  Familia_model.py  Message_model.py  Ong_model.py  Recurso.py  User_model.py  __init__.py  transaction_model.py
auth/routers/: Beneficiarios_routers.py  Campanha_routers.py  DistribuicaoRecurso_routers.py  EstoqueRecurso_routers.py  Familia_routers.py  Login_routers.py  Ong_routers.py  Recursos_routers.py  Relatorios_routers.py  __init__.py  transaction_router.py
auth/schemas/: Beneficiario.py  Campanha.py  DistribuicaoRecurso.py  EstoqueRecurso.py  Familia.py  Ongs.py  Recurso.py  __init__.py
auth/security/: security.py
auth/tests/: conftest.py
backend/: .env  near.js  package-lock.json  package.json  pinata.js  server.js  uploadAndSave.js
backend/crypto/: .env
contract_zec/: Cargo.toml  backend.js  backend.py  package-lock.json  package.json
contract_zec/src/: lib.rs
contrato/: Cargo.toml  README.md
contrato_near/: Cargo.toml
contrato_near/src/: lib.rs
frontend/: package-lock.json  package.json  postcss.config.cjs  postcss.config.js  tailwind.config.js  vite.config.ts
payment_contract/: Cargo.toml
zcash-rpc-integration/: .env  index.ts  package-lock.json  package.json  tsconfig.json  zcashRpc.ts
(+75 files in other folders)
