[package]
name = "contract_zec"
version = "0.1.0"
edition = "2024"

[dependencies]
near-sdk = "4.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }

[lib]
crate-type = ["cdylib", "rlib"] 